Fix navigation on tablets
On a tablet sized screen in some cases for no particular reason that I
can tell the navigation will get huge when some items are selected.
Setting the body to 1fr seems to fix this so it may just be a browser
bug with double auto and our many hidden items in a collapsed navigation
view.

--- a/app/styles/layout/_layout.scss
+++ b/app/styles/layout/_layout.scss
@@ -35,7 +35,7 @@
     grid-template-rows: auto auto 1fr 20px;
 
     @include for-tablet-and-up {
-      grid-template-rows: 42px auto auto 20px;
+      grid-template-rows: 42px auto 1fr 20px;
     }
 
     @include for-laptop-and-up {
